syntax = "proto3";

option go_package = "/psm";

package process_manager;

import "proto/laptop_message.proto";

message CreateLaptopRequest{
    Laptop laptop = 1;
}

message CreateLaptopResponse{
    string id = 1;
}

service LaptopService{
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse);
}